log
Thu 09 May 2024 10:39:02 PM UTC: 
 tests:  1|8
total_score: 0/70
2fe0efd
Thu 09 May 2024 10:52:53 PM UTC: 
 treemap.c | 47 ++++++++++++++++++++++++++++++++---------------
 1 file changed, 32 insertions(+), 15 deletions(-)
In file included from test.c:4:
treemap.c:73:1: error: expected ‘;’, ‘,’ or ‘)’ before ‘{’ token
   73 | {
      | ^
Compilation failed
c02333b
Thu 09 May 2024 10:53:08 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
52c9467
Thu 09 May 2024 10:58:28 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:96:22: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   96 |             else if (lower_than(node->pair->key,key))
      |                      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7d3ec65
Thu 09 May 2024 10:59:44 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|7
total_score: 5/70
b058d6c
